--- a/backend/package.json
+++ b/backend/package.json
@@ -13,7 +13,9 @@
   "license": "ISC",
   "dependencies": {
     "@google/genai": "^1.31.0",
+    "axios": "^1.13.2",
     "bcrypt": "^5.1.1",
+    "cloudinary": "^2.8.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -21,6 +23,7 @@
     "google-auth-library": "^10.5.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.3",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.11",
     "openai": "^6.10.0",
     "socket.io": "^4.8.1",
